# NeuroLingo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: builder.yaml
docs/: Untitled.ipynb  notebook.ipynb  system_description.md
scripts/: script.sh  svc.job  svm.job  svm.sh
