[tool.poetry]
name = "neurolingo"
version = "0.1.0"
description = "NLP 2YP"
authors = ["Tim Poulsen <timpoulsen1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
torch = "^1.8.0"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
seaborn = "^0.11.1"
ipython = "^7.21.0"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"
jupyterlab = "^3.0.11"
jupyterlab-git = "^0.23.3"
nltk = "^3.5"
gensim = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
